updated photo of lissa, fixed map on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -2817,21 +2817,27 @@ span.stButton_gradient,
   top: 0;
   right: 0;
   height: 100%;
-  width: 40%;
+  width: 33%;
 }
 
 #services .map-text > div {
   position: absolute;
-  top: calc(50% - 160px);
-  /*left: calc(50% - 100px);*/
+  top: 15%;
 }
 
-#services h2 {
+@media (max-width: 768px) {
+  #services .map-text > div {
+    position: absolute;
+    top: 7%;
+  }
+}
+
+#services h3 {
   font-weight: bold;
 }
 
 #services p {
-  font-size: 20px;
+  font-size: 12pt;
   padding-top: 10px;
 }
 
